convert sass to css

--- a/scss/phrase/_phrase.scss
+++ b/scss/phrase/_phrase.scss
@@ -1,13 +1,13 @@
 /* Phrase */
 
 .letter {
-    font-size: var(--font-size-medium);
+    font-size: $font-medium;
     height: 65px;
     width: 65px;
     padding: 20px 1px 0 1px;
     margin-right: 2px;
     color: transparent;
-    background: var(--color-neutral-light);
+    background: $color-netural-light;
     border-radius: 5px;
   }
   
