--- a/css/main.css
+++ b/css/main.css
@@ -13,51 +13,84 @@
   --transition: all .2s ease-in-out;
 }
 
-@keyframes pulse {
+@keyframes pulseTo {
   0% {
-    width: 18%;
-  }
-  10% {
-    width: 15%;
-  }
-  15% {
-    width: 18%;
-  }
-  20% {
-    width: 20%;
-  }
-  30% {
     width: 30%;
   }
-  40% {
-    width: 40%;
-  }
   50% {
-    width: 50%;
-  }
-  60% {
-    width: 60%;
-  }
-  70% {
-    width: 70%;
-  }
-  80% {
-    width: 80%;
-  }
-  90% {
-    width: 90%;
-  }
-  93% {
-    width: 95%;
-  }
-  95% {
-    width: 97%;
-  }
-  98% {
-    width: 102%;
+    width: 100%;
   }
   100% {
-    width: 100%;
+    width: 30%;
+  }
+}
+@keyframes colorChange {
+  0% {
+    color: #000;
+  }
+  50% {
+    color: #D2D2D2;
+  }
+  100% {
+    color: #000;
+  }
+}
+@keyframes bgColorChange {
+  0% {
+    background-color: #d2d2d2;
+  }
+  35% {
+    background-color: rgba(210, 210, 210, 0.01);
+  }
+  70% {
+    background-color: rgba(210, 210, 210, 0.1);
+  }
+  100% {
+    background-color: #d2d2d2;
+  }
+}
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-2deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(2deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(2deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-2deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-2deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(2deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-2deg);
+    background-color: #f7a964;
+  }
+}
+@keyframes color {
+  from {
+    background-color: #D2D2D2;
+  }
+  to {
+    background: #3a3f58;
   }
 }
 /* main */
@@ -89,40 +122,57 @@ h1 {
   font-size: 30px;
 }
 
-button {
+.key {
+  cursor: pointer;
   margin: 6px;
-  border: 1px solid transparent;
   padding: 0.5rem 1rem;
-  color: #37474F;
   font-size: 20px;
+  border: 1px solid transparent;
+  color: #37474F;
   background-color: #E5E5E5;
   border-radius: 5px;
   -webkit-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
-  cursor: pointer;
 }
 
 #btn__reset {
-  width: 200px;
-  margin: 0 auto;
   position: relative;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  border-radius: 25px;
+  border: none;
+  background-color: #D2D2D2;
 }
-#btn__reset span {
+#btn__reset .cover {
   content: " ";
-  width: 20%;
+  width: 30%;
   background-color: #f5785f;
-  height: 105%;
+  height: 100%;
   position: absolute;
-  top: -1px;
-  left: -1px;
-  border-radius: 5px;
+  top: 0;
+  left: 0;
+  border-radius: 25px;
+  z-index: 1;
+}
+#btn__reset .text {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0 auto;
+  text-align: center;
+  z-index: 10;
 }
 #btn__reset:hover {
-  color: yellow;
+  animation: bgColorChange 2s ease-in-out infinite;
 }
-#btn__reset span:hover {
-  animation: pulse 0.7s ease-in-out;
+#btn__reset:hover > .text {
+  animation: colorChange 2s ease-in-out infinite;
+}
+#btn__reset:hover > .cover {
+  animation: pulseTo 2s ease-in-out infinite;
 }
 
 .main-container {
@@ -163,7 +213,7 @@ button {
 }
 
 .title {
-  color: #646C79;
+  color: #F7E8DF;
 }
 
 .start {
@@ -197,14 +247,18 @@ button {
 }
 
 .chosen {
-  background: #3a3f58;
+  transition: background-color 2s ease-in;
+  background-color: #3a3f58;
   border-radius: 5px;
   font-size: 20px;
   color: #FFFFFF;
 }
 
 .wrong {
-  background: #f7a964;
+  animation: shake 1s ease-in-out;
+  transition-delay: 1.1s;
+  transition: background-color;
+  background-color: #f7a964;
   color: #FFFFFF;
 }
 
