--- a/scss/keyboard/_keyboard.scss
+++ b/scss/keyboard/_keyboard.scss
@@ -6,14 +6,19 @@
   }
   
   .chosen {
-    background: #3a3f58;
+    transition: background-color 2s ease-in;
+    background-color: #3a3f58;
     border-radius: 5px;
-    font-size: var(--font-size-medium);
+    font-size: $font-medium;
     color: #FFFFFF;
   }
   
   .wrong {
-    background: #f7a964;
+    animation: shake 1s ease-in-out;
+    transition-delay: 1.1s;
+    transition: background-color;
+    
+    background-color: #f7a964;
     color: #FFFFFF;
   }
   
