--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,6 @@
   }
   100% {
     transform: translate(1px, -2px) rotate(-2deg);
-    background-color: #f7a964;
   }
 }
 @keyframes color {
@@ -247,19 +246,21 @@ h1 {
 }
 
 .chosen {
-  transition: background-color 2s ease-in;
+  animation: shake 1s ease-in-out;
+  transition: color ease-in-out, background-color ease-in-out;
+  transition-delay: 0.9s;
+  color: #fff;
   background-color: #3a3f58;
   border-radius: 5px;
   font-size: 20px;
-  color: #FFFFFF;
 }
 
 .wrong {
   animation: shake 1s ease-in-out;
-  transition-delay: 1.1s;
-  transition: background-color;
+  transition: color ease-in-out, background-color ease-in-out;
+  transition-delay: 0.9s;
+  color: #fff;
   background-color: #f7a964;
-  color: #FFFFFF;
 }
 
 .btn__reset {
@@ -296,6 +297,8 @@ h1 {
 }
 
 .show {
+  transition: color ease-in-out, background-color ease-in-out;
+  transition-delay: 1s;
   color: #fff;
   background-color: #4ac0d5;
   font-size: 20px;
