--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -20,6 +20,15 @@ $font-medium: 20px;
 
 $transition : all .2s ease-in-out;
 
+// mixin
+
+@mixin transition($letterColor, $bgColor,  $delay) {
+  transition: color ease-in-out, background-color ease-in-out;
+  transition-delay : $delay;
+  color: $letterColor;
+  background-color: $bgColor;
+}
+
 
 :root {
     --color-win: #78CF82;
@@ -92,7 +101,6 @@ $transition : all .2s ease-in-out;
     80% { transform: translate(-1px, -1px) rotate(2deg); }
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-2deg); 
-      background-color: #f7a964;
           }
   }
 
