--- a/css/main.css
+++ b/css/main.css
@@ -111,10 +111,9 @@ li, ol, ul {
 }
 
 h2 {
-  margin: 0;
+  margin: 0.5em;
   text-transform: uppercase;
   font-size: 60px;
-  margin: 0;
 }
 
 h1 {
