--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,14 +20,14 @@
   }
   
   h2 {
-    margin: 0;
+    margin: .5em;
     text-transform: uppercase;
     font-size: $font-large;
-    margin: 0;
   }
   
   h1 {
     font-size: 30px;
+
   }
   
   .key {
