--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -3,13 +3,15 @@
 // color
 
 $color-win: #78CF82;
-$color-lose: #D94545;
+$color-lose: #2d0404;
 $color-start: #5b85b7;
-$color-netural: #445069;
+$color-netural: #7499a0;
 $color-netural-light: #D2D2D2;
-$color-keys: #37474F;
-$color-keys-light: #E5E5E5;
+$color-keys: #1D434B;
+$color-keys-light: #F7E8DF;
 $color-black: #000;
+$color-chosen: #1A3C43;
+$color-wrong: #EC4A2F;
 
 // font 
 
