color name change

--- a/scss/phrase/_phrase.scss
+++ b/scss/phrase/_phrase.scss
@@ -18,7 +18,7 @@
   
   
   .show {
-    @include transition(#fff, #4ac0d5, 1s);
+    @include transition(#fff, $color-keys, 1s);
     font-size: 20px;
     height: 65px;
     width: 65px;
